@@ -29,7 +29,7 @@ scribo/core/def/lbl_type.hh \
 scribo/core/document.hh \
 scribo/core/erase_objects.hh \
 scribo/core/init_integral_image.hh \
-scribo/core/internal/doc_xml_serializer.hh \
+scribo/core/internal/doc_serializer.hh \
 scribo/core/line_info.hh \
 scribo/core/line_links.hh \
 scribo/core/line_set.hh \
@@ -44,19 +44,20 @@ scribo/core/tag/line.hh \
 scribo/debug/alignment_decision_image.hh \
 scribo/debug/all.hh \
 scribo/debug/bboxes_enlarged_image.hh \
+scribo/debug/bboxes_image.hh \
 scribo/debug/char_space_image.hh \
 scribo/debug/decision_image.hh \
 scribo/debug/highlight_text_area.hh \
 scribo/debug/line_info_image.hh \
+scribo/debug/linked_bboxes_image.hh \
 scribo/debug/links_decision_image.hh \
+scribo/debug/links_image.hh \
+scribo/debug/logger.hh \
 scribo/debug/looks_like_a_text_line_image.hh \
 scribo/debug/mean_and_base_lines_image.hh \
-scribo/debug/save_bboxes_image.hh \
 scribo/debug/save_comp_diff.hh \
 scribo/debug/save_label_image.hh \
-scribo/debug/save_linked_bboxes_image.hh \
 scribo/debug/save_table_image.hh \
-scribo/debug/several_links_decision_image.hh \
 scribo/debug/text_areas_image.hh \
 scribo/debug/usage.hh \
 scribo/draw/all.hh \
@@ -74,6 +75,7 @@ scribo/filter/object_groups_size_ratio.hh \
 scribo/filter/object_groups_small.hh \
 scribo/filter/object_groups_v_thickness.hh \
 scribo/filter/object_groups_with_holes.hh \
+scribo/filter/object_links_aligned.hh \
 scribo/filter/object_links_bbox_h_ratio.hh \
 scribo/filter/object_links_bbox_overlap.hh \
 scribo/filter/object_links_bbox_ratio.hh \
@@ -97,17 +99,27 @@ scribo/filter/objects_with_holes.hh \
 scribo/fun/v2b/label_to_bool.hh \
 scribo/fun/v2b/objects_large_filter.hh \
 scribo/fun/v2b/objects_small_filter.hh \
+scribo/fun/v2v/highlight.hh \
+scribo/io/img/internal/debug_img_visitor.hh \
+scribo/io/img/internal/draw_edges.hh \
+scribo/io/img/internal/full_img_visitor.hh \
+scribo/io/img/internal/non_text_img_visitor.hh \
+scribo/io/img/internal/text_img_visitor.hh \
+scribo/io/img/save.hh \
 scribo/io/text_boxes/save.hh \
 scribo/io/xml/internal/extended_page_xml_visitor.hh \
 scribo/io/xml/internal/full_xml_visitor.hh \
 scribo/io/xml/internal/page_xml_visitor.hh \
 scribo/io/xml/internal/print_box_coords.hh \
+scribo/io/xml/internal/print_image_coords.hh \
 scribo/io/xml/internal/print_page_preambule.hh \
 scribo/io/xml/load.hh \
 scribo/io/xml/save.hh \
 scribo/make/all.hh \
 scribo/make/debug_filename.hh \
 scribo/make/influence_zone_graph.hh \
+scribo/make/text_blocks_image.hh \
+scribo/make/text_components_image.hh \
 scribo/postprocessing/all.hh \
 scribo/postprocessing/fill_object_holes.hh \
 scribo/preprocessing/all.hh \
@@ -127,6 +139,7 @@ scribo/primitive/extract/canvas.hh \
 scribo/primitive/extract/cells.hh \
 scribo/primitive/extract/components.hh \
 scribo/primitive/extract/horizontal_separators.hh \
+scribo/primitive/extract/internal/union.hh \
 scribo/primitive/extract/lines_discontinued.hh \
 scribo/primitive/extract/lines_h_discontinued.hh \
 scribo/primitive/extract/lines_h_pattern.hh \
@@ -141,6 +154,7 @@ scribo/primitive/extract/lines_v_single.hh \
 scribo/primitive/extract/lines_v_thick.hh \
 scribo/primitive/extract/lines_v_thick_and_single.hh \
 scribo/primitive/extract/non_text.hh \
+scribo/primitive/extract/non_text_kmean.hh \
 scribo/primitive/extract/separators.hh \
 scribo/primitive/extract/separators_nonvisible.hh \
 scribo/primitive/extract/vertical_separators.hh \
@@ -171,6 +185,7 @@ scribo/primitive/link/internal/find_several_links.hh \
 scribo/primitive/link/internal/link_functor_base.hh \
 scribo/primitive/link/internal/link_several_dmax_base.hh \
 scribo/primitive/link/internal/link_single_dmax_base.hh \
+scribo/primitive/link/internal/link_single_dmax_ratio_aligned_base.hh \
 scribo/primitive/link/internal/link_single_dmax_ratio_base.hh \
 scribo/primitive/link/merge_double_link.hh \
 scribo/primitive/link/with_graph.hh \
@@ -183,6 +198,7 @@ scribo/primitive/link/with_several_right_links_overlap.hh \
 scribo/primitive/link/with_single_down_link.hh \
 scribo/primitive/link/with_single_left_link.hh \
 scribo/primitive/link/with_single_left_link_dmax_ratio.hh \
+scribo/primitive/link/with_single_left_link_dmax_ratio_aligned.hh \
 scribo/primitive/link/with_single_right_link.hh \
 scribo/primitive/link/with_single_right_link_bottom.hh \
 scribo/primitive/link/with_single_right_link_dmax_ratio.hh \
