@@ -280,6 +280,7 @@ scribo_primitive_link_with_several_right_links \
 scribo_primitive_link_with_single_down_link \
 scribo_primitive_link_with_single_left_link \
 scribo_primitive_link_with_single_left_link_dmax_ratio \
+scribo_primitive_link_with_single_left_link_dmax_ratio_aligned \
 scribo_primitive_link_with_single_right_link \
 scribo_primitive_link_with_single_right_link_bottom \
 scribo_primitive_link_with_single_right_link_dmax_ratio \
@@ -511,6 +512,7 @@ scribo_primitive_link_with_several_right_links_SOURCES = scribo_primitive_link_w
 scribo_primitive_link_with_single_down_link_SOURCES = scribo_primitive_link_with_single_down_link.cc
 scribo_primitive_link_with_single_left_link_SOURCES = scribo_primitive_link_with_single_left_link.cc
 scribo_primitive_link_with_single_left_link_dmax_ratio_SOURCES = scribo_primitive_link_with_single_left_link_dmax_ratio.cc
+scribo_primitive_link_with_single_left_link_dmax_ratio_aligned_SOURCES = scribo_primitive_link_with_single_left_link_dmax_ratio_aligned.cc
 scribo_primitive_link_with_single_right_link_SOURCES = scribo_primitive_link_with_single_right_link.cc
 scribo_primitive_link_with_single_right_link_bottom_SOURCES = scribo_primitive_link_with_single_right_link_bottom.cc
 scribo_primitive_link_with_single_right_link_dmax_ratio_SOURCES = scribo_primitive_link_with_single_right_link_dmax_ratio.cc
